Dynamic size works now.

--- a/Final/package.json
+++ b/Final/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas-gauges": "^2.1.5",
     "serialport": "^6.2.0",
     "socket.io": "^2.1.0"
   }
